--- a/public_html/scss/partials/_footer.scss
+++ b/public_html/scss/partials/_footer.scss
@@ -1,4 +1,11 @@
 
+$footer-bg: $purple;
+$footer-text: $white;
+
 footer{
     padding: 30px 0;
+    background-color: $footer-bg;
+}
+footer a, footer p{
+    color: $footer-text;
 }
