--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -420,8 +420,34 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit thi
 footer {
   padding: 30px 0;
   background-color: #d61ad9; }
+  footer ul {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 30px; }
+    footer ul li a {
+      display: block;
+      text-align: center;
+      padding: 5px 0;
+      color: #ffffff;
+      font-family: "Josefin Sans", serif;
+      font-weight: 700;
+      font-size: 1.8rem; }
+      footer ul li a:hover, footer ul li a.active {
+        color: #07fa3c; }
+  footer .copyright {
+    text-align: center;
+    color: #ffffff; }
 
-footer a, footer p {
-  color: #ffffff; }
+@media (min-width: 768px) {
+  footer ul {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    footer ul li a {
+      padding: 5px 20px; } }
+
+@media (min-width: 992px) {
+  footer ul li a {
+    padding: 5px 30px; } }
 
 /*# sourceMappingURL=theme.css.map */
