--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -1,5 +1,35 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:wght@400;700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+.btn-yellow, .btn-purple, .btn-blue, .btn-green, .btn-orange, .btn-light {
+  display: inline-block;
+  padding: 15px 25px;
+  border-radius: 5px;
+  border: none; }
+
+.btn-yellow {
+  background-color: #f0e80e;
+  color: #ffffff; }
+
+.btn-purple {
+  background-color: #d61ad9;
+  color: #ffffff; }
+
+.btn-blue {
+  background-color: #1a1ad9;
+  color: #ffffff; }
+
+.btn-green {
+  background-color: #15ed39;
+  color: #ffffff; }
+
+.btn-orange {
+  background-color: #fac507;
+  color: #ffffff; }
+
+.btn-light {
+  background-color: #444444;
+  color: #ffffff; }
+
 /* FONTS */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -352,7 +382,7 @@ header {
       text-transform: uppercase;
       font-weight: 700; }
       header nav ul li a:hover, header nav ul li a.active {
-        color: #07fa3c; }
+        color: #15ed39; }
 
 @media (min-width: 768px) {
   header .container {
@@ -385,14 +415,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit thi
     Created on : Jan 30, 2025, 11:42:21 PM
     Author     : ZORAN
 */
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Jan 30, 2025, 11:42:41 PM
-    Author     : ZORAN
-*/
+.service-section {
+  padding: 30px 0; }
+
 /*
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
@@ -433,7 +458,7 @@ footer {
       font-weight: 700;
       font-size: 1.8rem; }
       footer ul li a:hover, footer ul li a.active {
-        color: #07fa3c; }
+        color: #15ed39; }
   footer .copyright {
     text-align: center;
     color: #ffffff; }
