--- a/public_html/scss/partials/_servicesSection.scss
+++ b/public_html/scss/partials/_servicesSection.scss
@@ -1,9 +1,3 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Jan 30, 2025, 11:42:41 PM
-    Author     : ZORAN
-*/
-
+.service-section{
+    padding: 30px 0;
+}
