--- a/public_html/scss/partials/_variables.scss
+++ b/public_html/scss/partials/_variables.scss
@@ -3,7 +3,7 @@
 $purple: #d61ad9;
 $white: #ffffff;
 $black: #000000;
-$green: #07fa3c;
+$green: #15ed39;
 $blue: #1a1ad9;
 $yellow: #f0e80e;
 $orange: #fac507;
