--- a/public_html/scss/partials/_contactSection.scss
+++ b/public_html/scss/partials/_contactSection.scss
@@ -1,9 +1,7 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Jan 30, 2025, 11:43:36 PM
-    Author     : ZORAN
-*/
 
+
+$contact-bg: $white;
+
+.contact-section{
+    @include pedd-bg(40px, 40px, $contact-bg);
+}
