--- a/public_html/scss/partials/_aboutSection.scss
+++ b/public_html/scss/partials/_aboutSection.scss
@@ -1,9 +1,7 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Jan 30, 2025, 11:42:21 PM
-    Author     : ZORAN
-*/
 
+
+$about-bg: $white;
+
+.about-section{
+    @include pedd-bg(30px, 30px, $about-bg);
+}
