--- a/public_html/scss/partials/_commentSection.scss
+++ b/public_html/scss/partials/_commentSection.scss
@@ -1,9 +1,7 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Jan 30, 2025, 11:43:00 PM
-    Author     : ZORAN
-*/
 
+
+$comment-bg: $white;
+
+.comment-section{
+    @include pedd-bg(50px, 50px, $comment-bg);
+}
