--- a/public_html/scss/partials/_footer.scss
+++ b/public_html/scss/partials/_footer.scss
@@ -5,8 +5,9 @@ $footer-font: $josefin;
 $footer-link-color: $green;
 
 footer{
-    padding: 30px 0;
-    background-color: $footer-bg;
+/*    padding: 30px 0;
+    background-color: $footer-bg;*/
+     @include pedd-bg(50px, 50px, $footer-bg);
     
     ul{
         list-style: none;
