--- a/public_html/scss/partials/_header.scss
+++ b/public_html/scss/partials/_header.scss
@@ -5,8 +5,10 @@ $nav-font: $josefin;
 $nav-link-color: $green;
 
 header{
-    padding: 30px 0;
-    background-color: $header-bg;
+/*    padding: 30px 0;
+    background-color: $header-bg;*/
+
+  @include pedd-bg(50px, 50px, $header-bg);
     
     .branding{
         text-align: center;
