--- a/public_html/scss/partials/_homeSection.scss
+++ b/public_html/scss/partials/_homeSection.scss
@@ -1,9 +1,6 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Jan 30, 2025, 11:42:12 PM
-    Author     : ZORAN
-*/
 
+
+
+.home-section{
+    @include pedd-bg(20px, 20px, transparent);
+}
