--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -9,27 +9,27 @@
 
 .btn-yellow {
   background-color: #f0e80e;
-  color: #ffffff; }
+  color: #f0e80e; }
 
 .btn-purple {
   background-color: #d61ad9;
-  color: #ffffff; }
+  color: #fac507; }
 
 .btn-blue {
   background-color: #1a1ad9;
-  color: #ffffff; }
+  color: #fac507; }
 
 .btn-green {
   background-color: #15ed39;
-  color: #ffffff; }
+  color: #f0e80e; }
 
 .btn-orange {
   background-color: #fac507;
-  color: #ffffff; }
+  color: #f0e80e; }
 
 .btn-light {
   background-color: #444444;
-  color: #ffffff; }
+  color: #fac507; }
 
 /* FONTS */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
